# phast

./: .gitignore  README.md  pyproject.toml  requirements-docs.txt
docs/_autoapi_templates/python/: module.rst
docs/source/: conf.py
examples/data/: is2re_bs3.pt
phast/: __init__.py  embedding.py  graph_rewiring.py  utils.py
tests/: t_utils.py  test_embedding.py  test_graph_rewiring.py
