[tool.poetry]
name = "phast"
version = "0.1.0"
description = ""
authors = ["Victor Schmidt <vsch@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
pandas = "^1.4"
mendeleev = "^0.12.1"
torch = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
ipython = "^8.10.0"
sphinx = "5.3.0"
myst-parser = "0.18.1"
sphinx_rtd_theme = "1.1.1"
sphinx-math-dollar = "1.2.1"
sphinx-autoapi = "^2.0.0"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest-cov = "^4.0.0"
ipdb = "^0.13.11"
furo = "^2023.3.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
